# wcc

./: .gitignore  .gitmodules  AUTHORS  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  config.sub  configure  configure.ac  install-sh  libtool
.github/workflows/: codeql-analysis.yml  codeql.yml
doc/: binfmt.txt  wcc.txt  wld.txt  wsh.txt
doc/html/: annotated.html  bswap_8h.html  bswap_8h_source.html  classes.html  colors_8h.html  colors_8h_source.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_5525a861181c0b64325a8ef46cb2ce95.html  dir_80d03dcdd178e1371add3de5045b4bc9.html  dir_8feb92f600d0b21de2da74d50512a7a0.html  dir_aa6bb4fa749e479bc2b69d3e21ddb95a.html  dir_f4f661274f03b90b540aee73bdc2353a.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_v.html  functions_vars.html  functions_vars_b.html  functions_vars_c.html  functions_vars_d.html  functions_vars_e.html  functions_vars_f.html  functions_vars_g.html  functions_vars_h.html  (+151 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_c.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_2.js  defines_3.js  (+79 more)
doc/manpages/: wcc.1  wcc.8  wcch.1  wld.1  wld.8  wldd.1  wsh.1
doc/presentations/demos_defcon24_2016/: README
doc/presentations/demos_defcon24_2016/apache/: Makefile  README  ap2version.c
doc/presentations/demos_defcon24_2016/bsd2linux/: Makefile  README  fmt.c  fmt.c.O0_amd64  linuxify.sh  linuxify2.sh
doc/presentations/demos_defcon24_2016/bsd2linux/missing/: Makefile  missing.c
doc/presentations/demos_defcon24_2016/proftpd/: Makefile  README  demo0.c  demo1.c  demo2.c  demo3.c  script.lds
doc/presentations/demos_defcon24_2016/relinking/: Makefile  README  small.c
doc/presentations/demos_defcon24_2016/smbserver_exploit/: README  poc.wsh
include/: arch.h  aux.h  config.h  elf-em.h  nametoalign.h  nametoentsz.h  nametoinfo.h  nametolink.h  nametotype.h  uthash.h  utlist.h
libltdl/: COPYING.LIB  Makefile.am  Makefile.in  README  aclocal.m4  argz.c  argz_.h  config-h.in  configure  configure.ac  lt__alloc.c  lt__dirent.c  lt__strl.c  lt_dlloader.c  lt_error.c  ltdl.c  ltdl.h  slist.c
libltdl/config/: compile  config.guess  depcomp  ltmain.sh  missing
libltdl/libltdl/: lt__alloc.h  lt__dirent.h  lt__glibc.h  lt__private.h  lt__strl.h  lt_dlloader.h  lt_error.h  lt_system.h  slist.h
libltdl/loaders/: dld_link.c  dlopen.c  dyld.c  load_add_on.c  loadlibrary.c  preopen.c  shl_load.c
libltdl/m4/: libtool.m4  ltdl.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
m4/: argz.m4
src/: Makefile
src/tex/: doxygen.sty  footer.tex  header.tex  project.cfg
src/tools/: Makefile  Makefile.am  Makefile.in  ldd.c  wcch.in  wldd  wldd.in
src/wcc/: Makefile  Makefile.am  Makefile.in  wcc.c
src/wld/: Makefile  Makefile.am  Makefile.in  main.c  wld.c  wld.h
src/wldd/: Makefile  Makefile.am  Makefile.in  bswap.h  wldd.c
src/wsh/: Makefile  Makefile-arm  Makefile-i386  Makefile-linaro  Makefile.am  Makefile.in  disasm.c  elfloader64.c  helper.c  loadblacklist.h  wsh.c  wshmain.c
src/wsh/demos/: apache2.wsh  bfmap.wsh  breakpoints.wsh  grep.wsh  ls.wsh  md5.wsh  memread.wsh  read.wsh  symbols.wsh
src/wsh/include/: colors.h  longjmp.h
src/wsh/include/libwitch/: disasm.h  helper.h  mylaux.h  sigs.h  wsh.h  wsh.h.in  wsh_functions.h  wsh_help.h
src/wsh/librustdemangle/: Cargo.toml
src/wsh/librustdemangle/src/: lib.rs
src/wsh/lua/src/: Makefile  Makefile.am  Makefile.in  ldebug.c  lua  luac
src/wsh/scripts/: INDEX  INDEX.in  annotate  breakpoints  callmain.wsh  debug  dumpbin.wsh  dumptable  hashing  headers  hexdump  internals.lua  json.lua  libmain  libmain.in  main.wsh  map  md5.wsh  md5.wsh.in  md5_bsd.wsh  memory  print_G  print_G.in  read.wsh  read.wsh.in  scope  search  searchobj  store
src/wsh/tests/: Makefile  Makefile.am  Makefile.in
src/wsh/tests/apache2/: Makefile  Makefile.am  Makefile.in  ap.h  ap2v.c
src/wsh/tests/sshd/: Makefile  Makefile.am  Makefile.in  ssh.c
src/wsh/tests/sshd2/: Makefile  Makefile.am  Makefile.in  ssh.h  sshd2.c
